Fix T66105: Changing force field does not update simulation